Remove jxpath, handle convertion directly on json nodes, add CLI tool.
Signed-off-by: Ales Justin <ales.justin@gmail.com>